# opx-base-model

./: .gitreview  Makefile.am  README.md  configure.ac
.github/: CODEOWNERS
common/dell/: dell-extensions.yang  dell-yang-types.yang
common/yumaworks/: yumaworks-extensions.yang
debian/: changelog  control  libopx-base-model-dev.install  libopx-base-model1.install  rules
history/: acl-config.yhist  app-telemetry.yhist  app-ztd.yhist  bridge-domain.yhist  dell-base-acl.yhist  dell-base-alms.yhist  dell-base-cleanup-events.yhist  dell-base-common.yhist  dell-base-env-tempctl.yhist  dell-base-etl-common.yhist  dell-base-etl.yhist  dell-base-hash.yhist  dell-base-if-common.yhist  dell-base-if-fc.yhist  dell-base-if-lag.yhist  dell-base-if-linux.yhist  dell-base-if-mgmt.yhist  dell-base-if-phy.yhist  dell-base-if-vlan.yhist  dell-base-interface-common.yhist  dell-base-interface.yhist  dell-base-ip.yhist  dell-base-l2-mac.yhist  dell-base-lag.yhist  dell-base-media.yhist  dell-base-mirror.yhist  dell-base-neighbor.yhist  dell-base-packet.yhist  dell-base-pas.yhist  dell-base-phy-interface.yhist  dell-base-platform-common.yhist  dell-base-port-group.yhist  dell-base-qos.yhist  dell-base-routing.yhist  dell-base-sflow.yhist  dell-base-statistics.yhist  dell-base-stg.yhist  dell-base-switch-element.yhist  dell-base-trap.yhist  dell-base-udf.yhist  (+42 more)
openconfig/: openconfig-extensions.yang  openconfig-inet-types.yang  openconfig-telemetry-types.yang  openconfig-telemetry.yang
rfc/: iana-afn-safi.yang  ietf-access-control-list.yang  ietf-dhcp.yang  ietf-igmp-mld-snooping.yang  ietf-inet-address.yang  ietf-ipsec.yang  ietf-key-chain.yang  ietf-network-instance.yang  ietf-ntp.yang  ietf-packet-fields.yang  ietf-routing-types.yang  ietf-routing.yang  ietf-yang-library.yang  ietf-yang-schema-mount.yang
src/unit_test/: run_test
yang-models/: acl-config.yang  app-telemetry.yang  app-ztd.yang  bridge-model.yang  dell-base-acl.yang  dell-base-alms.yang  dell-base-cleanup-events.yang  dell-base-common.yang  dell-base-env-tempctl.yang  dell-base-etl-common.yang  dell-base-etl.yang  dell-base-hash.yang  dell-base-if-fc.yang  dell-base-if-lag.yang  dell-base-if-linux.yang  dell-base-if-mgmt.yang  dell-base-if-phy.yang  dell-base-if-vlan.yang  dell-base-if.yang  dell-base-interface-common.yang  dell-base-ip.yang  dell-base-l2-mac.yang  dell-base-media.yang  dell-base-mirror.yang  dell-base-neighbor.yang  dell-base-packet.yang  dell-base-pas.yang  dell-base-platform-common.yang  dell-base-port-group.yang  dell-base-qos.yang  dell-base-routing.yang  dell-base-sflow.yang  dell-base-stg.yang  dell-base-switch-element.yang  dell-base-trap.yang  dell-base-udf.yang  dell-fcoe-mapper.yang  dell-interface.yang  dell-port-group.yang  dhcp-agent.yang  (+11 more)
